--- a/goslow/css/goslow.css
+++ b/goslow/css/goslow.css
@@ -1,33 +1,28 @@
 body {
   overflow: hidden;
 }
-
 .full-page-wrapper {
   position: relative;
   background-color: white;
-  .mode {
-    font-size: 2em;
-    padding-top: 10px;
-    border: none;
-  }
-  .full-page {
-    width: 100%;
-  }
 }
-
+.full-page-wrapper .mode {
+  font-size: 2em;
+  padding-top: 10px;
+  border: none;
+}
+.full-page-wrapper .full-page {
+  width: 100%;
+}
 .delay-message {
   display: none;
   font-size: 2em;
 }
-
 #intro {
   position: absolute;
 }
-
 .waiting {
   position: absolute;
 }
-
 .buttons {
   position: absolute;
   top: 0px;
@@ -41,113 +36,94 @@ body {
 .button-title {
   padding-top: 275px;
 }
-
 .start-button {
   display: table-cell;
   width: 50%;
   height: 100%;
   vertical-align: bottom;
-  button {
-    font-size: 5em;
-    -webkit-border-radius: 0 !important;
-    -moz-border-radius: 0 !important;
-    border-radius: 0 !important;
-    border: none;
-    margin: 0px 0px 0px 0px;
-    padding: 0px 0px 0px 0px;
-    margin-top: 0px !important;
-    height: 195px;
-  }
 }
-
+.start-button button {
+  font-size: 5em;
+  -webkit-border-radius: 0 !important;
+  -moz-border-radius: 0 !important;
+  border-radius: 0 !important;
+  border: none;
+  margin: 0px 0px 0px 0px;
+  padding: 0px 0px 0px 0px;
+  margin-top: 0px !important;
+  height: 195px;
+}
 .slowmo button {
   border-right: 2px solid black;
 }
-
 .message button {
   border-left: 4px solid black;
 }
-
 #startup {
   padding: 20px;
 }
-
 .top-paddng {
   padding-top: 10px;
 }
-
 .large-top-padding {
   padding-top: 100px;
 }
-
 .setup-button {
   width: 220px;
 }
-
 #instructions {
   height: 100%;
 }
-
 #instructions p {
   font-size: 3em;
   line-height: 1em;
 }
-
 #instructions h1 {
   padding-top: 160px;
   font-size: 5em;
   line-height: 1em;
 }
-
 #instructions-text {
   font-size: 2em;
 }
-
 .title {
   font-size: 6em;
   line-height: 1em;
 }
-.count, .arrow {
+.count,
+.arrow {
   font-size: 20em;
   line-height: 1.1em;
 }
-
 #recording-info {
   font-size: 3em;
 }
-
-#gopro_stream, #gopro_playback {
+#gopro_stream,
+#gopro_playback {
   padding: 25px 25px;
   margin: auto;
   margin-bottom: 10px;
 }
-
 #recording {
   background-color: #b94a48;
-//  padding-top: 100px;
 }
-
 #recording .title {
   font-size: 10em;
   color: white;
 }
-
 #recording-text {
   color: #ffcfcf;
   font-size: 4em;
   font-weight: 100;
 }
-
 #recording .count {
   font-size: 20em;
   line-height: 1em;
   color: white;
 }
-
 .video-template {
   display: none;
 }
-
 .goslow-error-wrapper {
   width: 100%;
   height: 100%;
@@ -164,7 +140,6 @@ body {
   width: 100%;
   font-size: 30px;
 }
-
 .loading {
   font-size: 40px;
   color: #666;
