Get playback after recording to work.

--- a/goslow/css/goslow.css
+++ b/goslow/css/goslow.css
@@ -121,6 +121,12 @@ body {
   line-height: 1em;
   color: white;
 }
+#done .status {
+  font-size: 4em;
+}
+#done button {
+  margin-bottom: 10px;
+}
 .video-template {
   display: none;
 }
