--- a/src/css/goslow.less
+++ b/src/css/goslow.less
@@ -144,6 +144,15 @@ body {
   color: white;
 }
 
+#done {
+  .status {
+    font-size: 4em;
+  }
+  button {
+    margin-bottom: 10px;
+  }
+}
+
 .video-template {
   display: none;
 }
