--- a/src/css/goslow.less
+++ b/src/css/goslow.less
@@ -15,11 +15,6 @@ body {
   }
 }
 
-.delay-message {
-  display: none;
-  font-size: 2em;
-}
-
 #intro {
   position: absolute;
 }
@@ -145,11 +140,10 @@ body {
 }
 
 #done {
+  color: white;
+  background-color: #d9534f;
   .status {
-    font-size: 4em;
-  }
-  button {
-    margin-bottom: 10px;
+    font-size: 4.2em;
   }
 }
 
